Add geospatial data generator for points, routes, and polygons
Introduce a customizable GeospatialDataGenerator class to generate, plot, and save geospatial data, including points, routes, and polygons, leveraging tools like OSMnx and GeoPandas. Includes boundary caching, CRS handling, and data visualization.

--- a/.gitignore
+++ b/.gitignore
@@ -34,10 +34,12 @@ ENV/
 config/local_config.py
 
 # Data
+data/
 data/raw/*
 data/processed/*
 !data/raw/.gitkeep
 !data/processed/.gitkeep
+cache/
 
 # Logs
 *.log
